// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <IconArrowSvg /> component Test <IconArrowSvg /> with props should correct render component with props 1`] = `
<div
  className="testContainer top"
>
  <svg
    height="100%"
    viewBox="0 0 24 24"
    width="100%"
  >
    <path
      className="testPath"
      d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"
    />
  </svg>
</div>
`;

exports[`Test <IconArrowSvg /> component Test <IconArrowSvg /> without props should correct render component without props 1`] = `
<div
  className="container right"
>
  <svg
    height="100%"
    viewBox="0 0 24 24"
    width="100%"
  >
    <path
      className="path"
      d="M5 3l3.057-3 11.943 12-11.943 12-3.057-3 9-9z"
    />
  </svg>
</div>
`;
